# gnutc_gdb_make_cmake

./: README.md
01 Hello World/: hello_world.c
02 factorial/: README.md  factorial  factorial.cpp
02 factorial_gdb/: factorial  factorial.cpp
03 gdbtui/: main.c
04 compilation process/: blabla  example.c  example.i  example.s
05 sample make/: Makefile  main.cpp  message.cpp  message.hpp
06 cmake introduction/hello/: CMakeLists.txt  main.cpp
07 cmake include_directories/test/: CMakeLists.txt
07 cmake include_directories/test/include/: calc.hpp
07 cmake include_directories/test/src/: calc.cpp  main.cpp
08 cmake add_library/: CMakeLists.txt
08 cmake add_library/lib/: CMakeLists.txt  Wifi.cpp  Wifi.hpp
08 cmake add_library/src/: main.cpp
09 Variables/: CMakeLists.txt
09 Variables/src/: main.cpp
10 config_file/: CMakeLists.txt  defaultconfig.h.in
10 config_file/src/: main.cpp
11 if-foreach-while/: CMakeLists.txt  defaultconfig.h.in
11 if-foreach-while/src/: main.cpp
12 function-cache/: CMakeLists.txt
13 compile-install/: CMakeLists.txt
13 compile-install/src/: main.cpp
14 file-string-execute_process/: CMakeLists.txt
15 avr_test/: CMakeLists.txt
15 avr_test/src/: main.cpp
